--- a/datum/index.html
+++ b/datum/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="icon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Datum - Your Book Recommendations App</title>
+    <title>Datum - Book Recommendations</title>
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
   </head>
   <body>
